# telegram_sender

./: .gitignore  README.md  pyproject.toml  requirements.txt  sender_messages.py  setup.py
telegram_sender/: __init__.py  core.py  sender_messages.py
